--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     Data from <a href="https://www.themealdb.com/" target="_blank">themealdb.com</a>
                 </p>
                 <p class="footer-link">
-                    by <a href="https://redhatdev16.github.io/portfolio/" target="_blank">redhatdev16</a> 2022
+                    by <a href="https://redhatdevn16.github.io/portfolio/" target="_blank">redhatdevn16</a> 2022
                 </p>
             </div>
         </footer>
